apps/hass/emqx/emqx-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  namespace: hass
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "emqx.mgmt.<path:vaults/Kubernetes/items/cluster#domain>"
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-https
  namespace: hass
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: https
  hostnames:
  - "emqx.mgmt.<path:vaults/Kubernetes/items/cluster#domain>"
  rules:
  - backendRefs:
    - name: emqx-dashboard 
      namespace: hass
      port: 18083
